<resources>
    <string name="app_name">Show UP!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="cadastrar_se">Cadastrar</string>
    <string name="login">Login</string>
    <string name="artista">Artista</string>
    <string name="voc">Você é?</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="title_activity_home_artista">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Buscar</string>
    <string name="title_activity_home_contratante">Home</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="telefone">Telefone</string>
    <string name="next">Continuar</string>
    <string name="saved_user_uid">uid</string>
    <string name="home">Home</string>
    <string name="sair">Sair</string>
    <string name="eventos_favoritos">Eventos Candidatados</string>
    <string name="todo">TODO</string>
    <string name="buscar">Buscar</string>
    <string name="title_activity_perfil_artista">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="artistas_favoritos">Artistas</string>
    <string name="meus_eventos">Meus Eventos</string>
    <string name="add_evento">Criar Evento</string>
    <string name="registrar">Registrar-se</string>
    <string name="criar_evento">Criar Evento</string>
    <string name="perfil">Perfil</string>
    <string name="detalhes_evento">Detalhes do Evento</string>
    <string name="resultado">Resultado</string>
    <string name="editar_evento">Editar Evento</string>
    <string name="nome_evento">Nome do Evento</string>
    <string name="descricao">Descrição</string>
    <string name="contratante">Contratante</string>
    <string name="intrumentos">Instrumentos Disponíveis</string>
    <string name="imagens_do_local">Imagens do local</string>
    <string name="Rock">Rock</string>
    <string name="Pop">Pop</string>
    <string name="Sertanejo">Sertanejo</string>
    <string name="eletronica">Eletrônica</string>
    <string name="pagode">Pagode</string>
    <string name="Samba">Samba</string>
    <string name="Brega">Brega</string>
    <string name="Outros">Outros</string>
    <string name="generos">Gêneros</string>
    <string name="ltimos_eventos">Últimos Eventos</string>
    <string name="t_tulo_do_evento">Título do evento: </string>
    <string name="localizacao">Localização:</string>
    <string name="data">Data</string>
    <string name="faixa_de_pre_o">Faixa de Preço:</string>
    <string name="candidatar_se">Candidatar-se</string>
    <string name="canal_no_youtube">Playlist Youtube:</string>
    <string name="visualizar">Visualizar</string>
    <string name="g_nero_musical">Gênero Musical:</string>
    <string name="nome_artista">Nome:</string>
    <string name="contato_artista">Contato:</string>
    <string name="foto_do_artista">Foto do artista</string>
    <string name="faixa_de_pre_o_por_show">Faixa de Preço por show:</string>
    <string name="artistas_candidataram">Candidatos para o evento: </string>
    <string name="detalhes_artista">Detalhes do Artista</string>
    <string name="artistas_em_destaque">Artistas em destaque</string>
    <string name="copie_e_cole_youtube">Copie e Cole a url do seu canal do youtube</string>
    <string name="selecionar">Selecionar</string>


</resources>
