<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home_contratante"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/edit_perfil_contratante"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/artistas_favoritos"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sair"/>
    </group>


</menu>
