<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contratante.CriarEventoActivity"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imagens_do_local"
            android:layout_marginTop="5dp"
            android:textSize="14sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/mdtp_dark_gray"
                android:layout_marginTop="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_add_new"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_add_black_24dp" />

        <ImageView
            android:id="@+id/image_add_new1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/todo"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_add_black_24dp" />

        <ImageView
            android:id="@+id/image_add_new2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/todo"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_add_black_24dp" />

        <ImageView
            android:id="@+id/image_add_new3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_add_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/btn_create_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.226">

        <EditText
            android:id="@+id/edit_nome_evento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome_evento"
            android:inputType="text"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/edit_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descricao"
            android:inputType="textMultiLine"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/edit_instrumentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/intrumentos"
            android:inputType="textMultiLine"
            android:layout_marginBottom="20dp"/>

        <Spinner
            android:id="@+id/spinner_faixa_preco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <AutoCompleteTextView
            android:id="@+id/auto_complete_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cidade"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/edit_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/data" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_create_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/mdtp_accent_color"
        android:text="@string/criar_evento"
        android:textColor="@color/mdtp_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>