<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".evento.DetalhesEventoActivity"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/progressbarHolderEventDetails">

    <ProgressBar
        android:id="@+id/progressBarDetails"
        style="?android:attr/progressBarStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollViewDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/slide_imgs_evento"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_tulo_do_evento"
                android:textColor="@color/mdtp_white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/descricao"
                    android:textColor="@color/mdtp_white"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary" />

            </LinearLayout>

            <TextView
                android:id="@+id/event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/descricao"
                android:textColor="@color/mdtp_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/event_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/localizacao"
                android:textColor="@color/mdtp_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/data"
                android:textColor="@color/mdtp_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/event_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/faixa_de_pre_o"
                android:textColor="@color/mdtp_white"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_candidatar_evento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mdtp_accent_color"
            android:text="@string/candidatar_se"
            android:textColor="@color/mdtp_white" />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>